--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,82 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    background:maroon;
-    
+  height: 100vh;
+  display: flex;
+  background: url(img/animated-gifs-of-fighting-game-backgrounds-8.gif);
+  background-size: cover;
+}
+.memory-game {
+  width: 640px;
+  height: 640px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  perspective: 1000px;
+}
+.memory-card {
+  width: calc(25% - 10px);
+  height: calc(33.333% - 10px);
+  margin: 5px;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform.5s;
 }
 
-.memory-game {
+.memory-card:active {
+  transform: scale(0.97);
+  transition: transform.2s;
+}
+
+.memory-card.flip {
+  transform: rotateY(180deg);
+}
+
+.front-face,
+.back-face {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  position: absolute;
+  border: 2px solid silver;
+  border-radius: 5px;
+  background: black;
+  backface-visibility: hidden;
+}
+.back-face:hover {
+  background: white;
+}
+.front-face {
+  transform: rotateY(180deg);
+}
+@media (max-width: 700px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    height: 100vh;
+    display: flex;
+    background: maroon;
+  }
+
+  .memory-game {
     width: 640px;
     height: 640px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
-}
+  }
 
-.memory-card {
+  .memory-card {
     width: calc(25% - 10px);
     height: calc(33.333% - 10px);
     margin: 5px;
@@ -28,20 +84,19 @@ body {
     transform: scale(1);
     transform-style: preserve-3d;
     transition: transform.5s;
+  }
 
-}
-
-.memory-card:active {
-    transform: scale(.97);
+  .memory-card:active {
+    transform: scale(0.97);
     transition: transform.2s;
-}
+  }
 
-.memory-card.flip {
+  .memory-card.flip {
     transform: rotateY(180deg);
-}
+  }
 
-.front-face,
-.back-face {
+  .front-face,
+  .back-face {
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -50,72 +105,9 @@ body {
     border-radius: 5px;
     background: black;
     backface-visibility: hidden;
-   
+  }
 
-}
-
-.front-face {
+  .front-face {
     transform: rotateY(180deg);
-}
-@media(max-width :700px){
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-    
-    body {
-        height: 100vh;
-        display: flex;
-        background:maroon;
-        
-    }
-    
-    .memory-game {
-        width: 640px;
-        height: 640px;
-        margin: auto;
-        display: flex;
-        flex-wrap: wrap;
-        perspective: 1000px;
-    }
-    
-    .memory-card {
-        width: calc(25% - 10px);
-        height: calc(33.333% - 10px);
-        margin: 5px;
-        position: relative;
-        transform: scale(1);
-        transform-style: preserve-3d;
-        transition: transform.5s;
-    
-    }
-    
-    .memory-card:active {
-        transform: scale(.97);
-        transition: transform.2s;
-    }
-    
-    .memory-card.flip {
-        transform: rotateY(180deg);
-    }
-    
-    .front-face,
-    .back-face {
-        width: 100%;
-        height: 100%;
-        padding: 20px;
-        position: absolute;
-        border: 2px solid silver;
-        border-radius: 5px;
-        background: black;
-        backface-visibility: hidden;
-       
-    
-    }
-    
-    .front-face {
-        transform: rotateY(180deg);
-    }
-   
+  }
 }
